--- a/non_app_class_samples/unit2d.html
+++ b/non_app_class_samples/unit2d.html
@@ -1,8 +1,8 @@
 <form>
   <select name="q">
-    <option>0</option>
-    <option>1</option>
-    <option>2</option>
+    <option value="0">zero</option>
+    <option value="1">one</option>
+    <option value="2">two</option>
   </select>
 
   <br>
